# agentic-banking-llmops

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_evaluation_history.py
docs/: code-calling-guide.md  logical-architecture.html  logical-architecture.md
docs/planning/: AGENTS.md  TASKS.md  architecture.md
grafana/provisioning/dashboards/: platform.json  provider.yml
knowledge_base/: contact_frequency_guidelines.yaml  credit_limit_policy.yaml  dispute_resolution_reg.yaml  hardship_eligibility.yaml  payment_intervention_playbook.yaml
platform/: __init__.py  db_seed.py  demo.py
platform/adapters/: __init__.py  adapter_factory.py  litellm_client.py  mock_channel_adapter.py  mock_llm_client.py  ollama_llm_client.py  postgres_audit_writer.py  postgres_feature_store.py  postgres_queue_store.py  qdrant_vector_store.py  valkey_context_store.py
platform/api/: __init__.py  dependencies.py  main.py
platform/api/routers/: __init__.py  audit.py  config.py  evaluation.py  models.py  (+5 more)
platform/core/: __init__.py  config.py  exceptions.py  interfaces.py  runtime_config.py  schemas.py
platform/evaluation/: __init__.py  judge.py  pipeline.py  schemas.py  store.py
platform/layer1_context/: __init__.py  feature_store.py  normalizer.py  service.py
platform/layer2_vector/: __init__.py  chunker.py  embedder.py  kb_loader.py  query_builder.py  reranker.py  retriever.py  service.py
platform/layer3_orchestration/: __init__.py  orchestrator.py  pipeline_registry.py  state_manager.py  tool_registry.py
platform/layer4_guardrails/: __init__.py  approval_queue.py  fairness.py  rule_engine.py  service.py
platform/layer5_ab/: __init__.py  drift_monitor.py  experiment_service.py  model_registry.py  outcome_processor.py  statistics.py
platform/layer6_sdk/: __init__.py  blueprint_runner.py  blueprints.py  client.py  outcome_router.py
platform/llm_inference/: __init__.py  metrics.py  router.py  schemas.py  service.py
platform/memory/: __init__.py  schemas.py  service.py  writer.py
platform/ml/: __init__.py  generate_training_data.py  schemas.py  scoring_service.py  train_models.py
platform/observability/: __init__.py  logging.py  metrics.py  tracing.py
prototype/: IFX_Architecture_Diagram.jsx  mini_ifx_platform.jsx
rules/business_policy/: b001_contact_frequency.yaml  b002_supervisor_threshold.yaml  b003_duplicate_case.yaml
rules/regulatory/: r001_udaap.yaml  r002_tcpa_consent.yaml  r003_fcra_adverse_action.yaml
rules/responsible_ai/: ai001_confidence_thresholds.yaml  ai002_partial_context.yaml  ai003_consistency.yaml
tests/: conftest.py
tests/fixtures/: __init__.py  customers.py  pipeline_states.py  policies.py
tests/integration/: test_adapters.py  test_api.py  test_full_pipeline.py  test_layer1_integration.py  test_layer2_integration.py
tests/unit/: test_api_routers_and_factory.py  test_db_seed.py  test_evaluation.py  test_layer1.py  test_layer2.py  test_layer3.py  test_layer4.py  test_layer5.py  test_layer6.py  test_llm_adapters.py  test_llm_inference.py  test_memory_service.py  test_ml_scoring.py  test_observability.py  test_runtime_config.py  test_schemas.py
ui/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/tests/: ui-hardening.spec.ts
(+59 files in other folders)
