[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "banking-agentic-ai-platform"
version = "0.1.0"
description = "Production-grade Agentic AI Platform for banking — 6 layers, cloud-agnostic, fully open source"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Core
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # Async HTTP
    "httpx>=0.27.0",

    # Storage — Valkey/Redis
    "redis[asyncio]>=5.0.4",

    # Storage — PostgreSQL
    "sqlalchemy[asyncio]>=2.0.30",
    "psycopg[asyncio,binary]>=3.1.19",
    "alembic>=1.13.1",

    # Vector store
    "qdrant-client[fastembed]>=1.9.1",

    # Embeddings + cross-encoder (local, no API key)
    "sentence-transformers>=3.0.1",
    "torch>=2.3.0",                        # required by sentence-transformers

    # BM25 sparse scoring
    "rank-bm25>=0.2.2",

    # LLM
    "litellm>=1.40.0",
    "anthropic>=0.28.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",

    # Data science
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scipy>=1.13.1",
    "scikit-learn>=1.5.0",

    # ML governance
    "evidently>=0.4.30",
    "mlflow>=2.14.1",

    # Config
    "pyyaml>=6.0.1",
    "watchdog>=4.0.1",

    # Observability
    "structlog>=24.2.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-instrumentation-redis>=0.46b0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
    "faker>=25.8.0",
    "respx>=0.21.1",
    "testcontainers[postgres,redis,generic]>=4.7.1",
    "mypy>=1.10.0",
    "ruff>=0.4.9",
    "types-pyyaml>=6.0.12",
    "types-redis>=4.6.0.20240425",
    "sqlalchemy[mypy]>=2.0.30",
]

[project.scripts]
demo = "platform.demo:main"

# ── Tool configuration ──────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
]

[tool.coverage.run]
source = ["platform"]
omit = ["platform/demo.py", "*/migrations/*", "*/alembic/*"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type hints)
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "ANN401",  # allow Any in specific cases
    "B008",    # allow function calls in defaults (FastAPI dependency injection)
    "TC002",   # Pydantic and Protocol annotations need runtime imports
    "TC003",   # Local schema types remain importable at runtime for introspection
    "UP042",   # Keep str + Enum style required by AGENTS.md
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]  # allow missing annotations and assert in tests

[tool.hatch.build.targets.wheel]
packages = ["platform"]
